--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "update-ssh-config"
 version = "0.1.0"
-authors = ["Noah Masur <noah.masur@take2games.com>"]
+authors = ["Noah Masur <noahmasur@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
