--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: run
-          args: '-- -h'
+          args: '-- --help'
   lints:
     runs-on: ubuntu-latest
     steps:
